# llvm-mos-docker

./: .gitignore  Dockerfile  Dockerfile.builder  LICENSE  README.md  build.sh  run.sh
example/: CMakeLists.txt  foo.c
